--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mongodb": "^3.0.1"
+    "mongodb": "^3.0.1",
+    "mongoose": "^4.13.9"
   }
 }
