--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.9"
   }
