Added /GET todos route

--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "express": "^4.16.2",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.9"
+  },
+  "devDependencies": {
+    "expect": "^22.0.3",
+    "mocha": "^4.1.0",
+    "supertest": "^3.0.0"
   }
 }
